# forg

./: .gitignore  .gitmodules  README.md  pyproject.toml
experiments/: content_expansion.py  cost.py  expansion_model.py  historical_transfer.py  metric_and_dimensionality.py
experiments/figures/: create_figures.ipynb
experiments/figures/run_data/basic-pytorch-run1/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-pytorch-run2/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-pytorch-run3/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-pytorch-run4/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-pytorch-run5/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-react-run1/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-react-run2/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-react-run3/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-react-run4/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-react-run5/: summary.txt  test_costs.pkl  train_costs.pkl
experiments/figures/run_data/basic-var-run1/: summary.txt  (+2 more)
forg/: __init__.py  cluster.py  costs.py  embedding.py  embedding_cache.py  embedding_metric.py  feature.py  file.py  metric.py  train.py  utils.py
notebooks/: cluster_react.ipynb  color-embeddings.ipynb  test.ipynb
report/: .gitignore  citations.bib  main.tex
(+87 files in other folders)
