[project]
name = "forg"
version = "0.0.1"
description = "Computing hierarchical embeddings of file contents using file system tree distance metrics"
readme = "README.md"
authors = [
    { name="Alex Chen", email="azc2110@columbia.edu" },
    { name="Gilbert Yang", email="gy2322@columbia.edu"},
]
requires-python = ">=3.10"
dependencies = [
    # sort these alphabetically
    "accelerate",
    "python-dotenv",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "numpy",
    "scipy",
    "tensorboard",
    "torch",
    "torchvision",
    "transformers",
    "typer",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["forg"]

[tool.isort]
profile = "black"

[tool.pyright]
exclude = ["**/.*", "**/__pycache__", "data", "embedding_cache"]
